test: Add basic integration tests